plugins {
    id 'java'
}

group = 'io.github.lynxus.it'
version = '1.0.0'

repositories {
    mavenLocal()
}

dependencies {
    implementation 'io.github.lynxus:lynxus-core:1.0.0-SNAPSHOT'
    annotationProcessor 'io.github.lynxus:lynxus-processor:1.0.0-SNAPSHOT'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        '-proc:full',
        '-processor', 'io.github.lynxus.compile.LynxusProcessor'
    ]
}
